src/c_ast_descendente/ConstructorASTsTiny.java
/* ConstructorASTsTiny.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package c_ast_descendente;
import asint.ClaseSemanticaEval;
import asint.SintaxisAbstractaEval.*;
import c_ast_ascendente.UnidadLexica.StringLocalizado;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
    private ClaseSemanticaEval sem = new ClaseSemanticaEval();

  final public Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
Prog prog;
      prog = Programa();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public Prog Programa() throws ParseException {
    trace_call("Programa");
    try {
DeclaracionesConSep dcs; Insts lis;
      jj_consume_token(36);
      dcs = DeclaracionesConSeparador();
      lis = ListaInstrucciones();
      jj_consume_token(37);
{if ("" != null) return sem.prog(dcs, lis);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Programa");
    }
}

  final public DeclaracionesConSep DeclaracionesConSeparador() throws ParseException {
    trace_call("DeclaracionesConSeparador");
    try {
LDecs decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRUCT:
      case PROC:
      case TYPE:
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case IDEN:
      case 44:{
        decs = Declaraciones();
        jj_consume_token(38);
{if ("" != null) return sem.declaraciones_con_separador(decs);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.sin_declaraciones();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DeclaracionesConSeparador");
    }
}

  final public LDecs Declaraciones() throws ParseException {
    trace_call("Declaraciones");
    try {
Declaracion dec; LDecs decs;
      dec = Declaracion();
      decs = DeclaracionesPrima(sem.una_dec(dec));
{if ("" != null) return decs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Declaraciones");
    }
}

  final public LDecs DeclaracionesPrima(LDecs ah) throws ParseException {
    trace_call("DeclaracionesPrima");
    try {
Declaracion dec; LDecs decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 39:{
        jj_consume_token(39);
        dec = Declaracion();
        decs = DeclaracionesPrima(sem.muchas_decs(ah, dec));
{if ("" != null) return decs;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DeclaracionesPrima");
    }
}

  final public Declaracion Declaracion() throws ParseException {
    trace_call("Declaracion");
    try {
Token id; Tipo tipo; Params params; Prog prog;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE:{
        jj_consume_token(TYPE);
        tipo = Tipo0();
        id = jj_consume_token(IDEN);
{if ("" != null) return (Declaracion) sem.declaracion_type(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case PROC:{
        jj_consume_token(PROC);
        id = jj_consume_token(IDEN);
        jj_consume_token(40);
        params = ListaParametros();
        jj_consume_token(41);
        prog = Programa();
{if ("" != null) return (Declaracion) sem.declaracion_proc(id.image, params, prog).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case STRUCT:
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case IDEN:
      case 44:{
        tipo = Tipo0();
        id = jj_consume_token(IDEN);
{if ("" != null) return (Declaracion) sem.declaracion_tipo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Declaracion");
    }
}

  final public Tipo Tipo0() throws ParseException {
    trace_call("Tipo0");
    try {
Tipo t1; Tipo t2;
      t1 = Tipo1();
      t2 = Tipo0Prima(t1);
{if ("" != null) return t2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Tipo0");
    }
}

  final public Tipo Tipo0Prima(Tipo ah) throws ParseException {
    trace_call("Tipo0Prima");
    try {
Token lit; Tipo res;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 42:{
        jj_consume_token(42);
        lit = jj_consume_token(LIT_ENT);
        jj_consume_token(43);
        res = Tipo0Prima(sem.tipo_array(ah, lit.image));
{if ("" != null) return  Tipo0Prima((Tipo) sem.tipo_array(ah, lit.image).ponFila(lit.beginLine).ponCol(lit.beginColumn));}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Tipo0Prima");
    }
}

  final public Tipo Tipo1() throws ParseException {
    trace_call("Tipo1");
    try {
Tipo res1; Tipo res2;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 44:{
        jj_consume_token(44);
        res1 = Tipo1();
{if ("" != null) return sem.tipo_puntero(res1);}
        break;
        }
      case STRUCT:
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case IDEN:{
        res2 = Tipo2();
{if ("" != null) return res2;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Tipo1");
    }
}

  final public Tipo Tipo2() throws ParseException {
    trace_call("Tipo2");
    try {
Token t; Cmps campos;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return sem.tipo_int();}
        break;
        }
      case REAL:{
        jj_consume_token(REAL);
{if ("" != null) return sem.tipo_real();}
        break;
        }
      case BOOL:{
        jj_consume_token(BOOL);
{if ("" != null) return sem.tipo_bool();}
        break;
        }
      case STRING:{
        jj_consume_token(STRING);
{if ("" != null) return sem.tipo_string();}
        break;
        }
      case STRUCT:{
        jj_consume_token(STRUCT);
        jj_consume_token(36);
        campos = Campos();
        jj_consume_token(37);
{if ("" != null) return sem.tipo_struct(campos);}
        break;
        }
      case IDEN:{
        t = jj_consume_token(IDEN);
{if ("" != null) return (Tipo) sem.tipo_iden(t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Tipo2");
    }
}

  final public Cmps Campos() throws ParseException {
    trace_call("Campos");
    try {
Declaracion dec; Cmps cp;
      dec = Declaracion();
      cp = CamposPrima(sem.un_campo(dec));
{if ("" != null) return cp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Campos");
    }
}

  final public Cmps CamposPrima(Cmps ah) throws ParseException {
    trace_call("CamposPrima");
    try {
Declaracion dec; Cmps res;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        dec = Declaracion();
        res = CamposPrima(sem.muchos_campos(ah, dec));
{if ("" != null) return res;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("CamposPrima");
    }
}

  final public Params ListaParametros() throws ParseException {
    trace_call("ListaParametros");
    try {
LParam params;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRUCT:
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case IDEN:
      case 44:{
        params = Parametros();
{if ("" != null) return sem.lista_parametros(params);}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
{if ("" != null) return sem.sin_parametros();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ListaParametros");
    }
}

  final public LParam Parametros() throws ParseException {
    trace_call("Parametros");
    try {
Tipo param; LParam params;
      param = Parametro();
      params = ParametrosPrima(sem.un_parametro(param));
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Parametros");
    }
}

  final public LParam ParametrosPrima(LParam ah) throws ParseException {
    trace_call("ParametrosPrima");
    try {
Tipo param; LParam params;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        param = Parametro();
        params = ParametrosPrima(sem.muchos_parametros(ah, param));
{if ("" != null) return params;}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ParametrosPrima");
    }
}

  final public Tipo Parametro() throws ParseException {
    trace_call("Parametro");
    try {
Tipo t; Tipo t2;
      t = Tipo0();
      t2 = ParametroPrima(t);
{if ("" != null) return t2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Parametro");
    }
}

  final public Tipo ParametroPrima(Tipo ah) throws ParseException {
    trace_call("ParametroPrima");
    try {
Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDEN:{
        id = jj_consume_token(IDEN);
{if ("" != null) return (Tipo) sem.parametro(ah, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case 46:{
        jj_consume_token(46);
        id = jj_consume_token(IDEN);
{if ("" != null) return (Tipo) sem.parametro_referencia(ah, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ParametroPrima");
    }
}

  final public Insts ListaInstrucciones() throws ParseException {
    trace_call("ListaInstrucciones");
    try {
LIns insts;
      insts = Instrucciones();
{if ("" != null) return sem.lista_instrucciones(insts);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ListaInstrucciones");
    }
}

  final public LIns Instrucciones() throws ParseException {
    trace_call("Instrucciones");
    try {
Instruccion inst; LIns insts;
      inst = Instruccion();
      insts = InstruccionesPrima(sem.una_instruccion(inst));
{if ("" != null) return insts;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Instrucciones");
    }
}

  final public LIns InstruccionesPrima(LIns ah) throws ParseException {
    trace_call("InstruccionesPrima");
    try {
Instruccion inst; LIns insts;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 39:{
        jj_consume_token(39);
        inst = Instruccion();
        insts = InstruccionesPrima(sem.muchas_instrucciones(ah, inst));
{if ("" != null) return insts;}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("InstruccionesPrima");
    }
}

  final public Instruccion Instruccion() throws ParseException {
    trace_call("Instruccion");
    try {
Token id; Expresion expAs; Prog prog; Argus args; Else e;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EVAL:{
        jj_consume_token(EVAL);
        expAs = ExpresionAsignacion();
{if ("" != null) return sem.instruccion_eval(expAs);}
        break;
        }
      case IF:{
        jj_consume_token(IF);
        expAs = ExpresionAsignacion();
        prog = Programa();
        e = ElseOpt();
{if ("" != null) return sem.instruccion_if(expAs, prog, e);}
        break;
        }
      case WHILE:{
        jj_consume_token(WHILE);
        expAs = ExpresionAsignacion();
        prog = Programa();
{if ("" != null) return sem.instruccion_while(expAs, prog);}
        break;
        }
      case READ:{
        jj_consume_token(READ);
        expAs = ExpresionAsignacion();
{if ("" != null) return sem.instruccion_read(expAs);}
        break;
        }
      case WRITE:{
        jj_consume_token(WRITE);
        expAs = ExpresionAsignacion();
{if ("" != null) return sem.instruccion_write(expAs);}
        break;
        }
      case NL:{
        jj_consume_token(NL);
{if ("" != null) return sem.instruccion_nl();}
        break;
        }
      case NEW:{
        jj_consume_token(NEW);
        expAs = ExpresionAsignacion();
{if ("" != null) return sem.instruccion_new(expAs);}
        break;
        }
      case DELETE:{
        jj_consume_token(DELETE);
        expAs = ExpresionAsignacion();
{if ("" != null) return sem.instruccion_delete(expAs);}
        break;
        }
      case CALL:{
        jj_consume_token(CALL);
        id = jj_consume_token(IDEN);
        jj_consume_token(40);
        args = ListaArgumentos();
        jj_consume_token(41);
{if ("" != null) return (Instruccion) sem.instruccion_call(id.image, args).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
{if ("" != null) return sem.instruccion_programa(Programa());}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Instruccion");
    }
}

  final public Else ElseOpt() throws ParseException {
    trace_call("ElseOpt");
    try {
Prog p;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        p = Programa();
{if ("" != null) return sem.else_opt_else(p);}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
{if ("" != null) return sem.else_opt_vacio();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ElseOpt");
    }
}

  final public Argus ListaArgumentos() throws ParseException {
    trace_call("ListaArgumentos");
    try {
LArgs args;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case NULL:
      case NOT:
      case IDEN:
      case LIT_ENT:
      case LIT_REAL:
      case LIT_CADENA:
      case 40:
      case 48:{
        args = Argumentos();
{if ("" != null) return sem.lista_argumentos(args);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
{if ("" != null) return sem.sin_argumentos();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ListaArgumentos");
    }
}

  final public LArgs Argumentos() throws ParseException {
    trace_call("Argumentos");
    try {
Expresion exp; LArgs args;
      exp = ExpresionAsignacion();
      args = ArgumentosPrima(sem.un_argumento(exp));
{if ("" != null) return args;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Argumentos");
    }
}

  final public LArgs ArgumentosPrima(LArgs ah) throws ParseException {
    trace_call("ArgumentosPrima");
    try {
Expresion exp; LArgs args;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        exp = ExpresionAsignacion();
        args = ArgumentosPrima(sem.muchos_argumentos(ah, exp));
{if ("" != null) return args;}
        break;
        }
      default:
        jj_la1[14] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ArgumentosPrima");
    }
}

  final public Expresion ExpresionAsignacion() throws ParseException {
    trace_call("ExpresionAsignacion");
    try {
Expresion er; Expresion e2;
      er = ExpresionRelacional();
      e2 = ExpAsignPrima(er);
{if ("" != null) return e2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExpresionAsignacion");
    }
}

  final public Expresion ExpAsignPrima(Expresion ah) throws ParseException {
    trace_call("ExpAsignPrima");
    try {
Expresion ea;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        jj_consume_token(47);
        ea = ExpresionAsignacion();
{if ("" != null) return sem.expresion_asignacion(ah, ea);}
        break;
        }
      default:
        jj_la1[15] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExpAsignPrima");
    }
}

  final public Expresion ExpresionRelacional() throws ParseException {
    trace_call("ExpresionRelacional");
    try {
Expresion e; Expresion e2;
      e = ExpresionAditiva();
      e2 = ExpRelPrima(e);
{if ("" != null) return e2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExpresionRelacional");
    }
}
